// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component should concat classname in props with Bulma classname 1`] = `
<label
  className="label other-class this-is-a-test"
>
  <p>
    Default
  </p>
</label>
`;

exports[`Label component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "render": [Function],
}
`;

exports[`Label component should have label classname 1`] = `
<label
  className="label"
>
  Test 
  <a>
    Give me
  </a>
</label>
`;

exports[`Label component should use inline styles 1`] = `
<label
  className="label"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</label>
`;
